--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <meta charset="UTF --8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Portfolio - Project 1</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <body>
