--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="UTF --8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Portfolio - Project 1</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <body>
