--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     
-   <div class="container">
+   <div class="container-2">
         <h2>Portfolio</h2>
         <div class="images">
         <div class="content">
