updated media queries

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
         <div class="images">
         <div class="content">
             <img src="assets/images/sloth-entertainment.jpg" alt="sloth-entertainment" width="200" height="200">
-            <h3>E! App</h3>
+            <h3>Entertainment App</h3>
         </div>
         <div class="content">
             <img src="assets/images/sloth-fitness.jpg" alt="sloth-fitness" width="200" height="200"> 
-            <h3>Fitness</h3>
+            <h3>Fitness App</h3>
           </div>  
         </div>
         <div class="content">
