added in links to games to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,12 @@
         <h2>Portfolio</h2>
         <div class="images">
         <div class="content">
-            <img src="assets/images/sloth-entertainment.jpg" alt="sloth-entertainment" width="200" height="200">
-            <h3>Entertainment App</h3>
+            <img src="assets/images/psychicgame.jpg" alt="Psychic-Game" width="200" height="200">
+            <h3><a href="https://arohl2015.github.io/Psychic-Game/">Psychic Game</a></h3>
         </div>
         <div class="content">
-            <img src="assets/images/sloth-fitness.jpg" alt="sloth-fitness" width="200" height="200"> 
-            <h3>Fitness App</h3>
+            <img src="assets/images/crystalcollector.JPG" alt="Crystal-Collector" width="200" height="200"> 
+            <h3><a href="https://arohl2015.github.io/unit-4-game/">Crystal Collector Game</a></h3>
           </div>  
         </div>
         <div class="content">
