--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <h2>Portfolio</h2>
         <div class="images">
         <div class="content">
-            <img src="assets/images/psychicgame.jpg" alt="Psychic-Game" width="200" height="200">
+            <img src="assets/images/psychicgame.JPG" alt="Psychic-Game" width="200" height="200">
             <h3><a href="https://arohl2015.github.io/Psychic-Game/">Psychic Game</a></h3>
         </div>
         <div class="content">
