added trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
           </div>  
         </div>
         <div class="content">
-            <img src="assets/images/sloth-game.jpg" alt="sloth-game" width="200" height="200">
-            <h3>Video Game</h3>
+            <img src="assets/images/popculture.PNG" alt="Trivia-Game" width="200" height="200">
+            <h3>Trivia Game</h3>
         </div>
         <div class="content">
             <img src="assets/images/sloth-music.jpg" alt="sloth-music" width="200" height="200">
