added new game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
         </div>
         <div class="content">
             <img src="assets/images/popculture.PNG" alt="Trivia-Game" width="200" height="200">
-            <h3>Trivia Game</h3>
+            <h3><a href="https://arohl2015.github.io/TriviaGame/">Trivia Game</a></h3>
         </div>
         <div class="content">
-            <img src="assets/images/sloth-music.jpg" alt="sloth-music" width="200" height="200">
-            <h3>Music App</h3>
+            <img src="assets/images/giftastic.PNG.jpg" alt="Giftastic" width="200" height="200">
+            <h3><a href="https://arohl2015.github.io/GifTastic/"></a>Giftastic</a></h3>
         </div>
         <div class="content">
             <img src="assets/images/sloth-photography.jpg" alt="sloth-photography" width="200" height="200"> 
