--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
             <h3><a href="https://arohl2015.github.io/GifTastic/"></a>Giftastic</a></h3>
         </div>
         <div class="content">
-            <img src="assets/images/sloth-photography.jpg" alt="sloth-photography" width="200" height="200"> 
-            <h3>Photo Editor</h3>
+            <img src="assets/images/trainscheduler.PNG" alt="Trainscheduler" width="200" height="200"> 
+            <h3><a href="https://arohl2015.github.io/TrainScheduler/"></a>Train Scheduler</a></h3>
           </div>  
         </div>
     </div>
